// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataOverlayComponentEditorSnap should render data rows for text annotation 1`] = `
<div>
  <div
    data-mocked="SpaceBetween"
  >
    <div
      data-mocked="FormField"
      label="Markdown Content"
    >
      <div
        data-mocked="Textarea"
        placeholder="Example: Current temperature \${temperature-binding-name}"
        value="markdown-content"
      />
    </div>
    <div
      data-testid="DataBindingMapEditor"
    >
      [{"hasBindingName":true,"hasRemoveButton":true,"valueDataBindingProvider":{},"component":{"ref":"comp-ref","type":"DataOverlay","subType":"TextAnnotation","dataRows":[{"rowType":"Markdown","content":"markdown-content"}],"valueDataBindings":[{"bindingName":"binding-1","valueDataBinding":{"dataBindingContext":{"entityId":"random-1"}}}]}},{}]
    </div>
  </div>
</div>
`;

exports[`DataOverlayComponentEditorSnap should render editor for overlay panel 1`] = `
<div>
  <div
    data-mocked="SpaceBetween"
  >
    <div
      data-mocked="FormField"
      label="Markdown Content"
    >
      <div
        data-mocked="Textarea"
        placeholder="Example: Current temperature \${temperature-binding-name}"
        value="markdown-content"
      />
    </div>
    <div
      data-testid="DataBindingMapEditor"
    >
      [{"hasBindingName":true,"hasRemoveButton":true,"valueDataBindingProvider":{},"component":{"ref":"comp-ref","type":"DataOverlay","subType":"OverlayPanel","dataRows":[{"rowType":"Markdown","content":"markdown-content"}],"valueDataBindings":[{"bindingName":"binding-1","valueDataBinding":{"dataBindingContext":{"entityId":"random-1"}}}]}},{}]
    </div>
  </div>
</div>
`;
